--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,10 @@
             android:id="@+id/nav_signout"
             android:icon="@drawable/ic_baseline_exit_to_app_24"
             android:title="@string/signout" />
+        <item
+            android:id="@+id/nav_view_report"
+            android:icon="@drawable/ic_baseline_dirty_lens_24"
+            android:title="sản phẩm bị báo cáo"
+            />
     </group>
 </menu>
