--- a/app/src/main/res/layout/fragment_detail_user.xml
+++ b/app/src/main/res/layout/fragment_detail_user.xml
@@ -24,6 +24,13 @@
             android:text="trang thai:dang hoat dong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:padding="5dp"
+            android:textSize="19sp"
+            android:id="@+id/txt_money"
+            android:text="số tiền : 10000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
