--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,5 +25,10 @@
             android:icon="@drawable/ic_baseline_dirty_lens_24"
             android:title="sản phẩm bị báo cáo"
             />
+        <item
+            android:id="@+id/nav_add_new_admin"
+            android:icon="@drawable/ic_baseline_add_24"
+            android:title="Thêm admin mới"
+            />
     </group>
 </menu>
