--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,17 @@
             android:text="@string/app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+        <EditText
+            android:id="@+id/edt_user_name"
+            android:layout_marginTop="100dp"
+            android:hint="Tên đăng nhập"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:inputType="textPassword"
+            android:hint="mật khẩu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
@@ -39,7 +49,7 @@
         android:textAllCaps="false"
         android:id="@+id/btn_sign_in"
         android:textColor="@color/white"
-        android:text="Continued With Phone Number "
+        android:text="Đăng nhập"
         app:layout_alignSelf="flex_start"
         android:layout_margin="8dp"
         android:background="@drawable/border_bottom"
