--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <EditText
+            android:id="@+id/edit_pass_word"
             android:inputType="textPassword"
             android:hint="mật khẩu"
             android:layout_width="match_parent"
