--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     >
@@ -13,36 +14,25 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <androidx.appcompat.widget.Toolbar
+
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#7A86EA"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title="Thêm admin mới">
+            app:title="đổi mật khẩu">
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
     <EditText
-        android:id="@+id/edt_user_name"
-        android:hint="Tên đăng nhập"
+        android:hint="nhập mật khẩu mới"
+        android:id="@+id/edit_pass_word_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/edt_name"
-        android:hint="Tên"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/edit_phone_number"
-        android:hint="Số điện thoại"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <Button
-        android:layout_marginTop="40dp"
-        android:text="Thêm admin mới"
-        android:id="@+id/btn_add_admin"
+        android:text="đổi mật khẩu"
+        android:id="@+id/btn_update_pass_word"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"/>
 
+</LinearLayout>
